# aalto_snlp_2025_project

./: .flake8  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  qdrant_ingest.py
experiments/BERT/: README.md  bertTrainer.py  bert_visualization_settings.yaml  berter.py  requirements.txt  visualize_bert_clusters.py
experiments/BOW/: README.md  bow.py  experiment.yaml  main.py  notes.md  query_search.py  visualization.ipynb  visualization.py
experiments/word2vec/: Word2Vec-2.ipynb  Word2Vec-2.py
